src/manifests/admin-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: admin

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-admin
  namespace: admin
spec:
  stripPrefix:
    prefixes:
      - /simple
      - /complex

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-app
  namespace: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-app
  template:
    metadata:
      labels:
        app: admin-app
    spec:
      containers:
        - name: api
          image: ghcr.io/traefik/api-server:v1.2.0
          args: ["-data", "/api/api.json", "-errorrate", "2"]
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: api-data
            mountPath: /api
      volumes:
        - name: api-data
          configMap:
            name: admin-data

---
apiVersion: v1
kind: Service
metadata:
  name: admin-app
  namespace: admin
  labels:
    app: admin-app
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: api
  selector:
    app: admin-app
