src/manifests/weather-app-forecast.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app-forecast
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-app-forecast
  template:
    metadata:
      labels:
        app: weather-app-forecast
    spec:
      containers:
        - name: api
          image: ghcr.io/traefik/api-server:v1.2.0
          args: ["-data", "/api/api.json", "-errorrate", "2"]
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: api-data
            mountPath: /api
      volumes:
        - name: api-data
          configMap:
            name: weather-app-forecast-data

---
apiVersion: v1
kind: Service
metadata:
  name: weather-app-forecast
  namespace: apps
  labels:
    app: weather-app-forecast
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: api
  selector:
    app: weather-app-forecast
