src/manifests/weather-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-weather
  namespace: apps
spec:
  stripPrefix:
    prefixes:
      - /api-key
      - /simple
      - /complex
      - /weather-v1-wrr
      - /weather-v1
      - /weather-multi-versions
      - /no-auth
      - /basic-auth
      - /api-key
      - /forecast

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
        - name: api
          image: ghcr.io/traefik/api-server:v1.2.0
          args: ["-data", "/api/api.json", "-openapi", "/public/openapi.yaml", "-errorrate", "2"]
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: api-data
            mountPath: /api
          - name: openapi
            mountPath: /public
      volumes:
        - name: api-data
          configMap:
            name: weather-data
        - name: openapi
          configMap:
            name: weather-app-openapispec

---
apiVersion: v1
kind: Service
metadata:
  name: weather-app
  namespace: apps
  labels:
    app: weather-app
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: api
  selector:
    app: weather-app
