src/manifests/weather-appv2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-app
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-appv2
  template:
    metadata:
      labels:
        app: private-appv2
    spec:
      containers:
        - name: api
          image: ghcr.io/traefik/api-server:v1.2.0
          args: ["-data", "/api/api.json", "-openapi", "/public/openapi.yaml", "-errorrate", "2"]
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: api-data
            mountPath: /api
          - name: openapi
            mountPath: /public
      volumes:
        - name: api-data
          configMap:
            name: private-appv2-data
        - name: openapi
          configMap:
            name: private-appv2-openapispec

---
apiVersion: v1
kind: Service
metadata:
  name: private-appv2
  namespace: apps
  labels:
    app: private-appv2
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: api
  selector:
    app: private-appv2
