src/manifests/whoami-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: traefik-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: traefik-hub
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami
